# chimera

./: .auto-claude-status  .claude_settings.json  .coveragerc  .env.template  .gitignore  .pre-commit-config.yaml  AEGIS_BLUEPRINT_FINAL.md  AGENTCORE_POWER_SUMMARY.md  AGENTS.md  API_ENDPOINT_FIX_DEPLOYMENT_GUIDE.md  API_ENDPOINT_SYNCHRONIZATION_GUIDE.md  AUTODAN_PRODUCTION_DEPLOYMENT_GUIDE.md  ByteRover.js  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_INTEGRATION_PLAN.md  DATABASE_SETUP_GUIDE.md  DATABASE_SETUP_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_AEGIS_BLUEPRINT.md  PROJECT_CHIMERA_BLUEPRINT.md  QUICK_DATABASE_REFERENCE.md  README.md  attack_result.json  bash.exe.stackdump  benchmark_optimized_results.txt  benchmark_results.txt  benchmark_weaponized_modules.py  check_backend_syntax.py  check_syntax.py  civp_nullification_routine.pseudocode  civp_nullification_routine.py  comprehensive_ethical_safeguards_complete_file_listing.txt  config.json  conftest.py  database_migration_guide.md  database_schema_analysis.md  database_schema_design.sql  debug_gemini_jailbreak_prompt.py  debug_output.txt  (+86 more)
.brv/: config.json  instance.json
.claude/: .mcp.json  ralph-loop.local.md  settings.local.json
.serena/: project.yml
.subagents/: format-log.js  manifest.json  resume.ps1  resume.sh  start.ps1  start.sh  test_agents.py
.tools/: apply_s311_changes.py  fix_classvar.py  remediate_s311.py  replace_random_with_secrets.py  replace_random_with_secrets.py.bak  s311_helper.py
Project_Chimera/: api_server.py  app.py
Project_Hydra/: project_hydra.py  vulnerability_report.md
agent 2/: .env.example  README.md  main.py  requirements.txt  standalone_auditor.py
agentcore-demo/: .bedrock_agentcore.yaml  .bedrock_agentcore_chimera.yaml  CHIMERA_AGENT.md  CUSTOM_AGENT_SUMMARY.md  QUICK_START.md  README.md  USAGE_GUIDE.md  requirements.txt  test_chimera_agent.py
app/: __init__.py
autodan-turbo/: README.md  config.example.yaml  config.yaml  main.py  requirements.txt
backend-api/: .coveragerc  .env.example  .model_selection.json  API_INTEGRATION_GUIDE.md  BACKEND_INTEGRATION_AUDIT.md  DATABASE_SCHEMA.md  Dockerfile  Dockerfile.production  PHASE_0_SECURITY_COMPLETION_REPORT.md  README.md  TESTING_STRATEGY.md  alembic.ini  attack_output.txt  attack_output_v2.txt  attack_output_v3.txt  attack_output_v4.txt  attack_output_v5.txt  attack_output_v5_final.txt  backend_lint_errors.json  chimera.db-shm  chimera.db-wal  completion_code.py  coverage.json  debug_app_import.py  debug_output.txt  debug_output_final.txt  debug_startup.py  demo_config_system.py  fix_health_404.py  generate_openapi.py  hotflip_test_results.txt  openapi.json  pytest.ini  pytest_clean.txt  pytest_phase1.txt  pytest_summary.txt  requirements-pipeline.txt  requirements-test.txt  requirements.txt  reset_password.py  (+32 more)
backend_api/: __init__.py  app.py
chimera-agent/: .env.example  ARCHITECTURE.md  README.md  main.py  requirements.txt  standalone_agent.py  technique_tools.py
chimera-orchestrator/: .env.example  README.md  enhanced_main.py  main.py  requirements.txt  test_orchestrator.py
cli/: README.md  chimera-cli.py  requirements.txt  setup.sh
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
config/: security-hardening.toml
data/: prompt_library.json
deepteam_autodan_integration/: README.md  orchestrator.py  workflow_example.py
docs/: API_COMPATIBILITY_MATRIX.md  API_DOCUMENTATION.md  API_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_GAP_ANALYSIS.md  ATTACK_SURFACE_ANALYSIS.md  AUTODAN_ADVANCED_OPTIMIZATION_FRAMEWORK.md  AUTODAN_ADVANCED_OPTIMIZATION_FRAMEWORK_PART2.md  AUTODAN_ADVANCED_OPTIMIZATION_FRAMEWORK_PART3.md  AUTODAN_ADVANCED_OPTIMIZATION_FRAMEWORK_PART4.md  AUTODAN_ADVANCED_OPTIMIZATION_FRAMEWORK_PART5.md  AUTODAN_ADVERSARIAL_GENERATION_ANALYTICAL_FRAMEWORK.md  AUTODAN_AUTODAN_TURBO_COMPARATIVE_ANALYSIS.md  AUTODAN_OPTIMIZATION_REPORT.md  AUTOMATION.md  BACKEND_API_AUDIT.md  BEST_PRACTICES_SUMMARY.md  BUG_FIXES_SUMMARY.md  CAMPAIGN_ANALYTICS.md  CANNOT_GET_ROOT_TROUBLESHOOTING.md  CERBERUS_GAUNTLET_ARCH_SPEC.md  CODEBASE_TECHNICAL_AUDIT.md  CODE_AUDIT_REPORT_V2.md  CODING_STANDARDS.md  COMPREHENSIVE_PROJECT_REVIEW.md  CONFIG_VALIDATION_SUMMARY.md  CORS_FIX_SUMMARY.md  COURSES_DESIGN.md  DATABASE_CONNECTOR_GUIDE.md  DATASETS_README.md  DATA_FLOW_DIAGRAMS.md  DATA_PIPELINE_ARCHITECTURE.md  DEEPTEAM_AUTODAN_INTEGRATION.md  DEEPTEAM_AUTODAN_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_GUIDE.md  DEVELOPMENT_SETUP.md  EVALUATION_METRICS.md  EXECUTIVE_SUMMARY.md  EXTENDATTACK_INTEGRATION_GUIDE.md  (+71 more)
examples/: README_AUTODAN.md  autodan_api_example.py  autodan_config_guide.md  autodan_quickstart.py
frontend/: ARCHITECTURE_IMPROVEMENTS.md  AUTODAN_ARCHITECTURE.md  Dockerfile  Dockerfile.prod  Dockerfile.production  README.md  TROUBLESHOOTING.md  basic.test.js  basic.test.ts  build_log.txt  eslint.config.mjs  fix_frontend_auth.js  next.config.performance.js  next.config.ts  package-lock.json  package.json  performance-report.json  server.js  tailwind.config.ts  tsc_check.txt  tsc_errors.txt  tsc_errors_debug.txt  tsc_errors_utf8.txt  tsc_final.txt  tsc_new.txt  tsc_output.txt  tsc_output_2.txt  tsc_output_3.txt  tsc_output_4.txt  tsc_services_check.txt  tsconfig.json  vitest.config.mts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
meta_prompter/: __init__.py  aegis_orchestrator.py  agents.py  architect.py  argus_filter.py  atoms.py  autodan_wrapper.py  cerberus_gauntlet.py  evaluators.py  interfaces.py  jailbreak_enhancer.py  library.py  orchestrator.py  prometheus_engine.py  prompt_enhancer.py  prompt_enhancer.py.bak  refiners.py  refusal_bypass_optimizer.py  refusal_bypass_optimizer.py.bak  registry.py  utils.py  vectors.py
monitoring/: alertmanager.yml  loki-config.yml  prometheus.yml  promtail-config.yml
performance/: README.md  __init__.py  apm_integration.py  baseline_tester.py  cpu_profiler.py  database_profiler.py  docker-compose.monitoring.yml  frontend_profiler.py  (+7 more)
prd/: PRD.md  (+7 more)
(+2248 files in other folders)
